[package]
name = "google-translation"
version = "0.1.0"
authors = ["hejile <hejianliangjia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12"
hyper-tls = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.6"
tokio = "*"